crates/hird-cli/tests/snapshots/timings__check_agent_fleet.snap
---
source: crates/hird-cli/tests/timings.rs
expression: counters(&report)
---
{
  "cst_nodes": 322,
  "effect_row_merges": 19,
  "emulator_boots": 0,
  "erl_bytes": 0,
  "exhaustiveness_rows": 16,
  "exhaustiveness_witnesses": 0,
  "modules": 2,
  "modules_compiled": 0,
  "modules_reused": 0,
  "subst_slots": 15,
  "tokens": 918,
  "typed_nodes": 225,
  "unify_calls": 149
}
