crates/hird-cli/tests/snapshots/timings__check_counter_demo.snap
---
source: crates/hird-cli/tests/timings.rs
expression: counters(&report)
---
{
  "cst_nodes": 98,
  "effect_row_merges": 11,
  "emulator_boots": 0,
  "erl_bytes": 0,
  "exhaustiveness_rows": 3,
  "exhaustiveness_witnesses": 0,
  "modules": 1,
  "modules_compiled": 0,
  "modules_reused": 0,
  "subst_slots": 11,
  "tokens": 276,
  "typed_nodes": 73,
  "unify_calls": 49
}
